--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 
 [packages]
 dj-database-url = "*"
-django = "*"
 gunicorn = "*"
 psycopg2 = "*"
 whitenoise = "*"
+Django = "*"
+requests = "*"
 
 [requires]
 python_version = "3.6"
